--- a/conf/application.conf
+++ b/conf/application.conf
@@ -15,6 +15,13 @@ application.secret="E27D^[_<Lpt0vjad]de;3;tx3gpRmG4ByofnahOIo9gbsMWut1w3xg[>9W"
 db.default.driver=org.h2.Driver
 db.default.url="jdbc:h2:mem:play;DB_CLOSE_DELAY=-1"
 
+#db.default.driver=oracle.jdbc.OracleDriver
+#ENTER IP
+#db.default.url="jdbc:oracle:thin:@1.1.1.1:orcl"
+#db.default.user=ptest
+#db.default.password=ptest
+#db.default.slickdriver=com.typesafe.slick.driver.oracle.OracleDriver
+
 # Assets configuration
 # ~~~~~
 "assets.cache./public/stylesheets/bootstrap.min.css"="max-age=3600"
